\name{NEWS}
\title{News for Package 'betaboost'}

\section{Changes in gamboostLSS version 1.0-0 (2018-06-18)}{
 \itemize{
   \item Release 'betaboost' to CRAN
 } 
}