@@ -1,8 +1,8 @@
 Package: betaboost
 Type: Package
 Title: Boosting Beta Regression
-Version: 1.0.0
-Date: 2018-06-19
+Version: 1.0.1
+Date: 2018-07-07
 Author: Andreas Mayr, Benjamin Hofner, Leonie Weinhold, Matthias Schmid
 Maintainer: Andreas Mayr <mayr@uni-bonn.de>
 Description: Implements boosting beta regression for potentially high-dimensional data (Mayr et al., 2018 <doi:10.1093/ije/dyy093>). 
@@ -18,6 +18,6 @@ License: GPL-3
 URL: For source code, development versions and issue tracker see
         https://github.com/boost-R/betaboost
 NeedsCompilation: no
-Packaged: 2018-06-19 19:21:55 UTC; amayr
+Packaged: 2018-07-07 19:45:38 UTC; amayr
 Repository: CRAN
-Date/Publication: 2018-06-24 11:07:58 UTC
+Date/Publication: 2018-07-07 20:30:03 UTC
