@@ -1,16 +1,16 @@
-0e2969a5d24f10166d79422b89e0524f *DESCRIPTION
+a938d75d28711965a27c682df312226e *DESCRIPTION
 b32d6ee7edddc9ad554c3136fb0c01b4 *NAMESPACE
 5de01c03b888ce3e9662705d87b39474 *R/BetaReg_family.R
 8ef4a8e769a113c72b46a78c8624f788 *R/R2.betaboost.R
 395e665d9284958af961d018526b53d0 *R/betaboost.R
 71a6683ce36ed34fefd3cd6d2f7ca30b *R/make_mboostform.R
 0c52ed14ab17c3b0e233b72ce5448b08 *R/methods.R
-cb091592fdb0638506f1bc4e8848a191 *README.md
+8161484584ffef3beb7937392f4d50b9 *README.md
 9a1eb09d94d69684292b4fe36f167d2a *build/vignette.rds
 23dfbe59837f7be157433520c589835c *data/QoLdata.rda
 b43e1c29bcb6025847019883ef03e403 *data/dataqol2.rda
-e961b3eaabe16cf1caf6de5595c54dec *inst/CITATION
-37e8fe1e32b67c3c364e36034c4c5f33 *inst/NEWS.Rd
+541bd6a5a0955d31b2c4498f679c7692 *inst/CITATION
+a98d43a5ed7edde162b052d3f54428e1 *inst/NEWS.Rd
 993d793d7a8adcae06a6823c419eb9ef *inst/doc/Using_betaboost_IJE.R
 ca205b2b1fe4ddb33da7ed96ff020a59 *inst/doc/Using_betaboost_IJE.Rmd
 d6dedf2bb9eb7d208fa55aefd9de0586 *inst/doc/Using_betaboost_IJE.html
@@ -23,5 +23,5 @@ e8cc2a5fd5eeb865bbdc2a423d75b45f *man/betaboost.Rd
 84a8484160680dff6bee00c5a3e8bc33 *man/make_mboostform.Rd
 25265460c96737cb4f4222922608e28c *man/predict.Rd
 47bc34c796fee06b0a1ceea1d710619d *tests/glmtest.R
-eb460c255681d8b0955dc82efa0f09e9 *tests/regtest-methods.R
+7c65c9ae12b527b1e447204c94cb6232 *tests/regtest-methods.R
 ca205b2b1fe4ddb33da7ed96ff020a59 *vignettes/Using_betaboost_IJE.Rmd
