@@ -1,6 +1,12 @@
 \name{NEWS}
 \title{News for Package 'betaboost'}
 
+\section{Changes in gamboostLSS version 1.0-1 (2018-07-07)}{
+ \itemize{
+   \item avoids calling 'predict.betaboost' directly, but uses generic, as suggested by CRAN
+ } 
+}
+
 \section{Changes in gamboostLSS version 1.0-0 (2018-06-18)}{
  \itemize{
    \item Release 'betaboost' to CRAN
